--- a/src/stage1/Makefile
+++ b/src/stage1/Makefile
@@ -1,53 +1,61 @@
-# Define the source file for stage 1 of the bootloader
+# TODO: having this include here is a patch for ASM_FORMAT not updating to -f bin
+include $(PROJECT)/misc/config.mk
+
+# Define sources
 ASM_SRC    =stage1.S
+
+# Override this flag as this "sub project" is directly compiled to a binary
 ASM_FORMAT =-f bin
 
-STAGE1_INLCUDE_DIRS =$(SRC_DIR)/BIOS
-STAGE1_INLCUDE_DIRS+=$(SRC_DIR)/common
-STAGE1_INLCUDE_DIRS+=$(SRC_DIR)/filesystems $(wildcard $(SRC_DIR)/filesystems/*/)
+# Get directories to include
+STAGE1_INCLUDE_DIRS =$(DEFAULT_INCLUDE_DIRS)
+STAGE1_INCLUDES     =$(foreach dir,$(STAGE1_INCLUDE_DIRS),-i $(dir))
 
-STAGE1_INLCUDES     =$(foreach dir,$(STAGE1_INLCUDE_DIRS),-i $(dir))
+# Debug targets
+DEBUG_I    =$(DEBUG_DIR)/stage1.i
+DEBUG_LST  =$(DEBUG_DIR)/stage1.lst
+DEBUG_DUMP =$(DEBUG_DIR)/stage1.dump
 
 
-# Define debug output paths
-# STAGE1_DEBUG_I    = $(DEBUG_DIR)/stage1_$(FILE_SYSTEM)_$(ARCH_BITS).i
-# STAGE1_DEBUG_LST  = $(DEBUG_DIR)/stage1_$(FILE_SYSTEM)_$(ARCH_BITS).lst
-# STAGE1_DEBUG_DUMP = $(DEBUG_DIR)/stage1_$(FILE_SYSTEM)_$(ARCH_BITS).dump
-
-.PHONY: stage1 debug stats
-
+.PHONY: stage1 debug
 
 stage1: $(STAGE1_BIN)
 	wc -c < $(STAGE1_BIN) >> $(STATS_FILE)
 
-debug: $(STAGE1_BIN)
-	@echo "Generating debug artifacts for stage1..."
+
+debug: $(DEBUG_I) $(DEBUG_LST) $(DEBUG_DUMP)
+# Finally, generate a debug build of the file (ie just add the debug define)
+	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) \
+	$(DEFINES) -DDEBUG \
+	$(STAGE1_INCLUDES) \
+	$< -o $@
+
+
 # Generate preprocessed output (.i file)
+$(DEBUG_I): $(ASM_SRC)
 	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) \
-	-D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	$(GBL_INCLUDES) \
+	$(DEFINES) \
+	$(STAGE1_INCLUDES) \
 	$(ASM_SRC) -E > $(STAGE1_DEBUG_I)
-# Generate listing file (.lst) and re-assemble (if not already done by build)
-# This re-runs assembly to include the listing output.
+
+
+# Generate listing file (.lst)
+$(DEBUG_LST): $(ASM_SRC)
 	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) \
-	-D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	$(GBL_INCLUDES) \
+	$(DEFINES) \
+	$(STAGE1_INCLUDES) \
 	$(ASM_SRC) -l $(STAGE1_DEBUG_LST) -o $(STAGE1_BIN)
-# Generate disassembly dump using ndisasm
-	ndisasm -b 16 -o 0x7C00 $(STAGE1_BIN) > $(STAGE1_DEBUG_DUMP)
-	@echo "Debug artifacts generated in $(DEBUG_DIR):"
-	@echo "  - $(STAGE1_DEBUG_I)"
-	@echo "  - $(STAGE1_DEBUG_LST)"
-	@echo "  - $(STAGE1_DEBUG_DUMP)"
 
 
-stats: $(STAGE1_BIN)
-
+# Generate disassembly dump
+$(DEBUG_DUMP): $(STAGE1_BIN)
+	$(DISASM) -b 16 -o 0x7C00 $(STAGE1_BIN) > $(STAGE1_DEBUG_DUMP)
 
 
 # Build rules
 $(STAGE1_BIN): $(ASM_SRC)
 	$(ASM) $(ASM_FORMAT) $(ASM_FLAGS) \
-	-D$(FILE_SYSTEM) -D$(ARCH_BITS) -DKERNEL_NAME='"$(KERNEL_NAME)"' \
-	$(STAGE1_INLCUDES) \
+	$(DEFINES) \
+	$(STAGE1_INCLUDES) \
 	$< -o $@
+	@echo ""
