Added 32 and 64 folder for build dir

--- a/src/boot16/Makefile
+++ b/src/boot16/Makefile
@@ -2,13 +2,12 @@ ASM_SRC    :=start.S
 ASM_FORMAT :=-f bin
 INCLUDES   :=-I ../firmware/
 
-# Since only 2 files hardcode here
+# Since only 1 file, hardcode here
 boot16:
-	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(INPUTS) $(INCLUDES) start.S -o $(BOOT16)
-	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(INPUTS) $(INCLUDES) -E start.S > $(DEBUG_DIR)/start.S
-# 	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(INPUTS) $(INCLUDES) GDT/setup32Mode.S -o $(BIN_DIR)/setup32Mode.bin
-# 	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(INPUTS) $(INCLUDES) -E GDT/setup32Mode.S > $(DEBUG_DIR)/setup32Mode.S
+	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(USER_INPUTS) $(INCLUDES) start.S -o $(BOOT16)
+	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(USER_INPUTS) $(INCLUDES) -E start.S > $(DEBUG_DIR16)/start.S
 
+# Stats
 	@echo -n "Boot16 size in bytes: " >> $(STATS_FILE)
 	@wc -c < $(BOOT16) >> $(STATS_FILE)
 	@echo ""
