WIP BITS32 still works but BITS64 is still not 100%, added steps to jump to 64 bit mode

--- a/src/boot16/Makefile
+++ b/src/boot16/Makefile
@@ -1,11 +1,11 @@
 ASM_SRC    :=start.S
-ASM_FORMAT :=-f bin
+ASM_FORMAT32 :=-f bin
 INCLUDES   :=-I ../firmware/
 
 # Since only 1 file, hardcode here
 boot16:
-	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(USER_INPUTS) $(INCLUDES) start.S -o $(BOOT16)
-	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT) $(USER_INPUTS) $(INCLUDES) -E start.S > $(DEBUG_DIR16)/start.S
+	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT32) $(USER_INPUTS) $(INCLUDES) start.S -o $(BOOT16)
+	$(ASM) $(ASM_FLAGS) $(ASM_FORMAT32) $(USER_INPUTS) $(INCLUDES) -E start.S > $(DEBUG_DIR16)/start.S
 
 # Stats
 	@echo -n "Boot16 size in bytes: " >> $(STATS_FILE)
