--- a/src/common/libs/Makefile
+++ b/src/common/libs/Makefile
@@ -1,14 +1,9 @@
 include $(PROJECT)/misc/config.mk
 
-ifeq ($(ARCH_BITS), BITS32)
-CURR_OBJ_DIR := $(OBJ_DIR32)
-else ifeq ($(ARCH_BITS), BITS64)
-CURR_OBJ_DIR := $(OBJ_DIR64)
-endif
-
 C_SRCS := $(shell find $(LIBS_DIR) -name "*.c" -type f)
 
-C_OBJS   :=$(patsubst %.c,$(CURR_OBJ_DIR)/%.o,$(notdir $(C_SRCS)))
+C_OBJS32   :=$(patsubst %.c,$(OBJ_DIR32)/%.o,$(notdir $(C_SRCS)))
+C_OBJS64   :=$(patsubst %.c,$(OBJ_DIR64)/%.o,$(notdir $(C_SRCS)))
 
 LIB_INCLUDE_DIRS := $(shell find $(LIBS_DIR) -mindepth 1 -type d)
 LIB_INCLUDES := $(foreach dir,$(LIB_INCLUDE_DIRS),-I $(dir))
@@ -16,14 +11,25 @@ LIB_INCLUDES := $(foreach dir,$(LIB_INCLUDE_DIRS),-I $(dir))
 # Generate vpath for all lib subdirectories
 $(foreach dir,$(LIB_INCLUDE_DIRS),$(eval vpath %.c $(dir)))
 
-.PHONY: libs
+.PHONY: libs32 libs64
 
-libs: $(C_OBJS)
-	@echo "--- Libs Build Complete ---"
+libs32: $(C_OBJS32)
+	@echo "--- Libs 32 Build Complete ---"
 	@echo ""
 
-$(C_OBJS) : $(CURR_OBJ_DIR)/%.o: %.c
+$(C_OBJS32) : $(OBJ_DIR32)/%.o: %.c
 	$(CC) $(CC_FLAGS) \
+	$(USER_INPUTS) \
+	$(LIB_INCLUDES) \
+	-c $< -o $@
+	@echo ""
+
+libs64: $(C_OBJS64)
+	@echo "--- Libs 64 Build Complete ---"
+	@echo ""
+
+$(C_OBJS64) : $(OBJ_DIR64)/%.o: %.c
+	$(CC64) $(CC_FLAGS) \
 	$(USER_INPUTS) \
 	$(LIB_INCLUDES) \
 	-c $< -o $@
