--- a/src/boot32/Makefile
+++ b/src/boot32/Makefile
@@ -17,7 +17,7 @@ ASM_INCLUDE_DIRS := $(BOOT32_DIR)/setup32Mode
 ASM_INCLUDES :=$(foreach dir,$(ASM_INCLUDE_DIRS),-I $(dir))
 # C_INCLUDES   :=$(foreach dir,$(C_INCLUDE_DIRS),-I $(dir))
 
-$(foreach dir,$(C_INCLUDE_DIRS),$(eval vpath %.c $(dir)))
+# $(foreach dir,$(C_INCLUDE_DIRS),$(eval vpath %.c $(dir)))
 $(foreach dir,$(ASM_INCLUDE_DIRS),$(eval vpath %.S $(dir)))
 
 # ASM and C SRCS will now contain <dir>/filename.<S/c>, so remove the dir to not
@@ -40,36 +40,37 @@ endif
 
 .PHONY: boot32
 
-boot32: libs $(TARGET_OBJ)
+boot32: $(ASM_OBJS) #libs
 	@echo -n "Boot32 size in bytes: " >> $(STATS_FILE)
 # 	@wc -c < $(TARGET_BIN) >> $(STATS_FILE)
 	@echo ""
 	@echo "--- Boot32 Build Complete ---"
 	@echo ""
 
-libs:
-ifeq ($(ARCH_BITS), BITS32)
-	$(MAKE) -C $(COMMON_DIR)/libs libs32
-endif
+# libs:
+# ifeq ($(ARCH_BITS), BITS32)
+# 	$(MAKE) -C $(COMMON_DIR)/libs libs32
+# endif
 
 # $(TARGET_BIN): $(TARGET_OBJ)
 # 	$(OBJ_CPY) $(OBJ_CPY_FLAGS) $< $@
 
-$(TARGET_OBJ): $(ASM_OBJS) # $(C_OBJS)
-	$(LD) -r $(CURR_LD_FORMAT) $(OBJ_DIR32)/*.o -o $@
-	$(OBJ_DMP) $(OBJ_DMP_FLAGS) $@ > $(DEBUG_DIR)/boot32_all.S
+# $(TARGET_OBJ): $(ASM_OBJS) # $(C_OBJS)
+# 	$(LD) -r $(CURR_LD_FORMAT) $(OBJ_DIR32)/*.o -o $@
+# 	$(OBJ_DMP) $(OBJ_DMP_FLAGS) $@ > $(DEBUG_DIR)/boot32_all.S
 
-$(ASM_OBJS): $(OBJ_DIR32)/%.o: %.S
-	$(ASM) $(ASM_FLAGS) $(CURR_ASM_FORMAT) \
-	$(ASM_INCLUDES) \
-	$(USER_INPUTS) \
-	$< -o $@ -l $(DEBUG_DIR32)/$(basename $(notdir $@)).S
+$(OBJ_DIR32)/%.o: %.S
 	@echo ""
 	$(ASM) $(ASM_FLAGS) $(CURR_ASM_FORMAT) \
 	$(ASM_INCLUDES) \
 	$(USER_INPUTS) \
-	$< -E > $(DEBUG_DIR32)/$(basename $(notdir $@)).S
-	@echo ""
+	-l $(DEBUG_DIR32)/$(basename $(notdir $@))_lst.S \
+	$< -o $@
+
+	@$(ASM) $(ASM_FLAGS) $(CURR_ASM_FORMAT) \
+	$(ASM_INCLUDES) \
+	$(USER_INPUTS) \
+	$< -E > $(DEBUG_DIR32)/$(basename $(notdir $@))_dbg.S
 
 # $(C_OBJS) : $(OBJ_DIR32)/%.o: %.c
 # 	$(CURR_CC) $(CC_FLAGS) \
