--- a/src/boot16/Makefile
+++ b/src/boot16/Makefile
@@ -12,6 +12,7 @@ boot16:
 	start.S > $(DEBUG_DIR16)/start_dbg.S
 
 # Stats
+# TODO: call a script that output to STATS_FILE the actual number of bytes used
 	@echo -n "Boot16 size in bytes: " >> $(STATS_FILE)
 	@wc -c < $(BOOT16) >> $(STATS_FILE)
 	@echo ""
